# relops-bootstrap

./: .gitignore  README.md  SECURITY.md  cloudbuild.yaml
.github/: CODEOWNERS
.github/workflows/: test.yml
broker/: .dockerignore  .gcloudignore  Dockerfile  README.md  pyproject.toml
broker/app/: auth.py  config.py  logging_setup.py  main.py  replay_cache.py  revocation.py  secrets.py
broker/tests/: conftest.py  test_auth.py  test_main.py  test_replay_cache.py  test_revocation.py
docs/: deep-dive.html  eacs.html  index.html  reprovision-architecture.html
mdm/: README.md  acme-relops.mobileconfig.template  com.mozilla.relops.bootstrap.plist  scep-relops.mobileconfig.template
orchestrator/: .env.example  README.md  pyproject.toml
orchestrator/orchestrator/: cli.py  config.py  demo.py  errors.py  hostnames.py  role_map.py  runner.py  screen_agent.py  secrets.py  ui.py  workflow.py
orchestrator/orchestrator/clients/: onepassword.py  simplemdm.py  ssh.py  taskcluster.py
orchestrator/tests/: test_check.py  test_demo.py  test_hostnames.py  test_mint.py  test_resolve.py  test_runner.py  test_screen_agent.py  test_secrets.py  test_ssh.py  test_taskcluster.py
pkg/: README.md  build.sh
pkg/payload/usr/local/sbin/: m4-bootstrap.sh
pkg/scripts/: postinstall
provisioner/: .gcloudignore  Dockerfile  README.md  pyproject.toml
provisioner/app/: config.py  guards.py  main.py  secrets.py  simplemdm.py  state.py  taskcluster.py
scripts/: INSTALL-on-worker.md  README.md  bootstrap-step-ca.sh  extract-identity.swift  fetch-vault-mtls.swift  install-on-worker.sh  integration-test-broker.py  mint-runner-cert.sh  mint-scep-cert.sh  mint-securetoken.sh  mint-test-cert.sh  reissue-runner-cert.sh  relops-bootstrap.sh  render-acme-mobileconfig.sh  render-scep-mobileconfig.sh  scep-x509-template.json.example  setup-scep-decrypter.sh  sign-jwt-with-keychain.swift  simplemdm-m4-no-sip-bootstrap.sh  simplemdm-vault-fetch-snippet.sh
terraform/: artifact_registry.tf  iam.tf  lb.tf  main.tf  mtls.tf  network.tf  outputs.tf  provisioner.tf  secrets.tf  simplemdm_secret.tf  step_ca.tf  terraform.tfvars.example  tfplan  tfplan2  variables.tf  vault_broker.tf
terraform/trust/: intermediate.pem  root.pem
