[project]
name = "vault-broker"
version = "0.1.0"
description = "Brokered Secret Manager reads for MDM-enrolled CI workers, authenticated by SCEP-issued client certs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "google-cloud-secret-manager>=2.20",
    "structlog>=24",
    # X-Client-Cert-Leaf parsing — GCP LB's SPIFFE extractor drops URI SANs
    # with URL-encoded characters, so the broker parses the leaf cert itself.
    "cryptography>=43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
