[project]
name = "relops-reprovision"
version = "0.1.0"
description = "Operator-side CLI that drives the end-to-end EACS workflow for a CI worker"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "taskcluster>=101",
    "asyncvnc>=1.1",  # hangar-screen-agent: VNC frame grab with Apple auth
    "pillow>=10",     # encode grabbed frames to JPEG
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
reprovision = "orchestrator.cli:app"
reprovision-runner = "orchestrator.runner:main"
hangar-screen-agent = "orchestrator.screen_agent:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
