[project]
name = "relops-provisioner"
version = "0.1.8"
description = "Cloud Run polling reconciler that fires SimpleMDM script-jobs for cold workers, gated by 8 safety guards."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24",
    "httpx>=0.27",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-storage>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
